[package]
name = "TS_DATAPROJECT"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = {version = "1.0.216", features = ["derive"]}
plotters = {version = "0.3.7", default-features = false, features = ["bitmap_backend", "evcxr", "all_series"]}
ndarray = "0.15.6"
linfa = "0.7.0"
linfa-linear = "0.7.0"